trying to fix desktop image alignment again

--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -1,7 +1,3 @@
 // Import Core Clean Blog SCSS
 @import "../assets/vendor/startbootstrap-clean-blog/scss/styles.scss";
 
-/* To center images */
-.center {
-    text-align: center;
-}
